kubernetes/back-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bacl-end-services
spec:
  type: ClusterIP
  selector:
    app: back-end
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
