kubernetes/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: LoadBalancer
  selector:
    app: fornt-end
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
