kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /frontend(/|$)(.*)
        backend:
          service:
            name: front-end-service
            port: 
              number: 80
      - pathType: Prefix
        path: /backend(/|$)(.*)
        backend:
          service:
            name: back-end-service
            port: 
              number: 5000
